# UMAP-Plugin

./: CMakeLists.txt  LICENSE  PluginInfo.json  README.md  conanfile.py
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: CMakeCPMDependencies.cmake  CMakeCheckSetAVX.cmake  CMakeFetchUtils.cmake  GetExternalDependencies.cmake  irlba.patch  kmeans.patch  knncolle.patch  knncolle_annoy.patch  knncolle_hnsw.patch  umappp.patch
src/: AdvancedSettingsAction.cpp  AdvancedSettingsAction.h  KnnSettingsAction.cpp  KnnSettingsAction.h  SettingsAction.cpp  SettingsAction.h  UMAPAnalysisPlugin.cpp  UMAPAnalysisPlugin.h  UMAPAnalysisPlugin.json
src/hnsw/: space_corr.h
src/knncolle/: Matrix_parallel.h
src/knncolle_hnsw/: knncolle_hnsw_parallel.h
src/util/: hnsw_space_corr.h  knncolle_find_nearest_neighbors.h  knncolle_hnsw_parallel.h  knncolle_matrix_parallel.h
test/: CMakeLists.txt  README.md  create_reference_data.py  requirements.txt  test_main.cpp  test_utils.h
